lan thu 2 thay doi

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa aliquid quasi inventore fugiat natus obcaecati quisquam atque deserunt animi asperiores minus sed dolorum totam dolore, neque quod modi pariatur accusantium.</p>
 </body>
 </html>
