--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa aliquid quasi inventore fugiat natus obcaecati quisquam atque deserunt animi asperiores minus sed dolorum totam dolore, neque quod modi pariatur accusantium.</p>
 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat, modi velit doloribus in cupiditate obcaecati nihil quaerat ipsum dolorum dolore.</p>
 <h2>đây là lần htuws 5</h2>
+<p>tôi là thành viên phụ</p>
 </body>
 </html>
